--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,58 +1,50 @@
 // This is where your styles can go, import any other scss or css files here or write your own style directly below
 * {
-  font-family: 'Permanent Marker', cursive;
-  
-}
+  font-family: 'Permanent Marker', cursive; }
+
 body {
-  background-image: url('https://cdn.pixabay.com/photo/2016/05/05/02/40/jetty-1373173_960_720.jpg');
+  background-image: url("https://cdn.pixabay.com/photo/2016/10/18/21/22/california-1751455_960_720.jpg");
   background-size: cover;
-  background-repeat: no-repeat;
-  
-}
+  background-repeat: no-repeat; }
+
 #header {
   margin-top: 50px;
   height: 100px;
-  background-color: black;
-}
+  text-shadow: 3px 3px 5px black;
+   }
+
 #banner {
   width: 90%;
   position: relative;
-  margin: 100px;
-  
+  margin: 100px; }
 
-}
 table {
   height: 70%;
   font-size: 3rem;
   margin: 80px auto;
   color: white;
-  background-color: rgba(249, 249, 250, 0.164);
   border-radius: 300px;
-  text-shadow: 3px 3px 5px black;
+  text-shadow: 3px 3px 5px black; }
 
-}
 table td {
   width: 60%;
-  padding: 13px;
-}
-#days,#hours,#minutes,#seconds {
+  padding: 13px; }
+
+#days, #hours, #minutes, #seconds {
   text-align: right;
-  padding-right: 10px;
-  
-}
+  padding-right: 10px; }
+
 #leftSideInfo {
   width: 90%;
-  margin-top: 30% ;
-color: white;
+  margin-top: 30%;
+  color: white;
   height: 20vh;
-  text-shadow: 3px 3px 5px black;
+  text-shadow: 3px 3px 5px black; }
 
-}
 .btn a {
   text-decoration: none;
-  color: white;
-}
+  color: white; }
+
 i {
   font-size: 2rem;
-  padding: 5px;
-}
+  padding: 5px; }
