--- a/styles/main.css
+++ b/styles/main.css
@@ -9,8 +9,7 @@ body {
 #header {
   margin-top: 50px;
   height: 100px;
-  text-shadow: 3px 3px 5px black;
-   }
+  text-shadow: 3px 3px 5px black; }
 
 #banner {
   width: 90%;
